objects/Form_Definition_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Definition__c</fullName>
        <label>Form Definition</label>
        <referenceTo>Form_Definition__c</referenceTo>
        <relationshipName>Form_Definition_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Read_Only_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EDF Form Definition Version</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Form_Definition__c</columns>
        <columns>Short_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FDV-{0000}</displayFormat>
        <label>Form Definition Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Definition Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>